Updated Chirpstack from V3 to V4 (#152)
* Fixed routing of gateway list + fixed memory leak by unsubscribing properly from gateway fetches

* Fixed routing errors in gateway list

* Changed mqtt datatarget topic placeholder + added tooltip

* Added additional text changes from Product Owner

* Removed maxLenght from device AND gateway EUI, now removes non-hex digits on submit

* Gateway upgrades to get data from v4.

* Added sticky to name column on gateway status table

* Implemented application table column selection

* Removed unused controller name from select

* Moved column selector to own component + implemented column selection on iot-device table

* Changed datastructure of gateway to match database + Column administration on gateway-status-table

* Changed column selector for a cog icon button

* Chirpstack updates.

* small fixes after merge

* Spinner for device profiles

* changed printhWidth to match backend

* fresh package-lock

* updated to node-version 18 on github

* First set of pr changes

* some PR changes before merge

* PR changes and added prettier from backend so it can match with frontend (both are nodejs, so shouldn't it be the same?)

* Updated package-lock and bumped monaco-editor down to 0.33

* Fixes

* da.json addition

---------

Co-authored-by: Frederik Christ Vestergaard <fcv@iterator-it.dk>
Co-authored-by: August Andersen <aha@iterator-it.dk>

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -328,7 +328,7 @@
     "NAME": "Navn",
     "IOT-DEVICES": "IoT enheder",
     "UPDATED": "Senest opdateret",
-    "DATA-TARGETS": "Datatarges",
+    "DATA-TARGETS": "Datatargets",
     "STATUS": "Status",
     "START-DATE": "Startdato",
     "END-DATE": "Slutdato",
@@ -360,7 +360,11 @@
     "LOCATION": "Placering",
     "LAST-SEEN-AT": "Seneste aktivitet",
     "STATUS": "Status",
-    "ORGANIZATION": "Organisation"
+    "ORGANIZATION": "Organisation",
+    "PACKETS-RECEIVED": "Pakker modtaget",
+    "PACKETS-SENT": "Pakker sendt",
+    "TAGS": "Tags",
+    "CREATED-AT": "Oprettelsesdato"
   },
   "LORA-GATEWAY-STATUS": {
     "TITLE": "LoRaWAN online status historik",
@@ -649,7 +653,6 @@
     "OTAA": "Over The Air Activation",
     "OTAA-ABP-CONFIG-HELP": "Du vælger din aktivation type via device profile",
     "ABP": "Activation By Personalisation",
-    "CHOOSE-SERVICEPROFILE": "Vælg service profile",
     "CHOOSE-DEVICE": "Vælg device profile",
     "OTAA-ACTIVATE": "Opret forbindelse vha. OTAA",
     "ADD-RELATIONS": "Tilføj IoT enhed og payload decoder",
@@ -884,7 +887,6 @@
     "DATAPACKAGE": "Datapakke",
     "LORA": {
       "DEVEUI": "Enheds EUI (DevEUI)",
-      "SERVICEPROFILE": "Service profil",
       "DEVICEPROFILE": "Device profil",
       "ACTIVATIONTYPE": "Aktivations type",
       "OTAA": "OTAA",
@@ -935,10 +937,10 @@
     "ID-INVALID-OR-ALREADY-IN-USE": "Id skal være unikt. Det pågældende Id er allerede brug",
     "DELETE-NOT-ALLOWED-ITEM-IS-IN-USE": "Dette element er i brug og kan derfor ikke slettes",
     "DELETE-NOT-ALLOWED-HAS-SIGFOX-DEVICE": "Applikation kan ikke blive slettet, da den indeholder en eller flere Sigfox enheder.",
-    "DELETE-NOT-ALLOWED-HAS-LORAWAN-DEVICE": "Service profilen kan ikke blive slettet, da den er i brug af en eller flere LoRaWAN enheder.",
+    "DELETE-NOT-ALLOWED-HAS-LORAWAN-DEVICE": "Device profilen kan ikke blive slettet, da den er i brug af en eller flere LoRaWAN enheder.",
     "OTAA-INFO-MISSING": "OTAA nøgle mangler eller er ikke gyldig.",
     "ABP-INFO-MISSING": "ABP nøgle mangler eller er ikke gyldig.",
-    "DIFFERENT-SERVICE-PROFILE": "Dine devices har forskellige service profiles. De skal have den samme service profile!",
+    "DIFFERENT-CREATION-SERVICE-PROFILE": "Dine devices har ved oprettelse haft forskellige service profiles. De skal have haft den samme service profile ved oprettelse!",
     "WRONG-SERVICE-PROFILE": "Dine devices har forkert service profile. Vælg devices som har samme service profile som din multicast.",
     "ID-DOES-NOT-EXIST": "Id'et findes ikke",
     "APPLICATION-DOES-NOT-EXIST": "Den tilhørende applikation findes ikke",
@@ -952,41 +954,11 @@
     "INVALID-DATE": "Datoen er ugyldig",
     "USER-ALREADY-HAVE-MAIL": "Brugeren har allerede sat en email",
     "EMAIL-ALREADY-IN-USE": "Den valgte email er allerede i brug. Kontakt din lokale administrator for hjælp."
+
   },
   "PROFILES": {
     "NAME": "LoRaWAN profiler",
     "DELETE-FAILED":"Slet fejlede",
-    "SERVICE_PROFILE": {
-      "CREATED":"Oprettet",
-      "UPDATED":"Senest opdateret",
-      "DETAILS": "Detaljer",
-      "DELETE-FROM-LIST":"Slet",
-      "HEADLINE": "Service profiler",
-      "DROPDOWN": "Håndter service profil",
-      "CREATE-NEW-SERVICE-PROFILE": "Opret service profile",
-      "EDIT": "Rediger profil",
-      "DELETE": "Slet profil",
-      "NAME": "Service profil navn",
-      "NAME_PLACEHOLDER": "service-profil-navn-uden-mellemrum",
-      "ADDGWMETADATA": "Tilføj gateway meta-data",
-      "ADDGWMETADATAEXPLAINED": "GW-metadata (RSSI, SNR, GW geoloc. Osv.) Føjes til den pakke, der sendes til applikationsserveren",
-      "NWKGEOLOC": "Aktivér geografisk placering af netværk",
-      "NWKGEOLOCEXPLAINED": "Når den er aktiveret, forsøger netværksserveren at løse placeringen af â€‹â€‹enhederne under denne serviceprofil. Bemærk, at du skal have gateways, der understøtter fine-timestamp, og at netværksserveren skal konfigureres for at yde support til geolokalisering.",
-      "REPORT_END_DEVICE": "Report end-device margin",
-      "DEVICEFREQUENCY": "Device status request frequency",
-      "DEVICEFREQUENCYEXPLANIED": "Frekvens til at starte en anmodning om end-device (requests pr. dag).",
-      "REPORTBATTERYSTATUS": "Rapporter enhedens batteriniveau til applikationsserveren",
-      "REPORTBATTERYMARGIN": "Rapporter device link margin til applikationsserver",
-      "DRRATEMIN": "Min data rate",
-      "DRRATEMINEXPLAINED": "Minimum tilladte data rate. Brugt til ADR",
-      "DRRATEMAX": "Max data rate",
-      "DRRATEMAXEXPLAINED": "Maximum tilladte data rate. Brugt til ADR",
-      "SAVE": "Gem",
-      "CANCEL": "Annuller",
-      "GOBACK": "Gå tilbage",
-      "ADDSERVICEPROFILE": "Redigér service profile",
-      "ID": "Service profilens id"
-    },
     "DEVICE_PROFILE": {
       "CREATED":"Oprettet",
       "UPDATED":"Senest opdateret",
@@ -1001,6 +973,7 @@
       "NAME_PLACEHOLDER": "Device profil navn",
       "MACVERSION": "LoRaWAN MAC version ",
       "ADRALGORITHM": "ADR algoritme ",
+      "DEVSTATUSREQFREQ": "Device-status request frequency (req/day)",
       "REGPARAMSREVISION": "LoRaWAN regional parameters revision ",
       "MAXEIRP": "Max EIRP ",
       "GEOLOCBUFFERTTL": "Geolocation buffer TTL (seconds)",
@@ -1026,6 +999,7 @@
       "MAXEIRP_PLACEHOLDER": "0",
       "GEOLOCBUFFERTTL_PLACEHOLDER": "0",
       "GEOLOCMINBUFFERSIZE_PLACEHOLDER": "0",
+      "DEVSTATUSREQFREQ_PLACEHOLDER": "1",
       "RXDROFFSET1_PLACEHOLDER": "0",
       "RXDATARATE2_PLACEHOLDER": "0",
       "RXFREQ2_PLACEHOLDER": "0",
