added cluster and a lot of smaller fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -40,5 +40,6 @@
     "CREATED-DESCENDING": "Created: faldende",
     "NAME-ASCENDING": "Name: acsending",
     "NAME-DESCENDING": "Name: faldende"
-  }
+  },
+  "DBLCLICKINFO": "Doubleclick on the map or drag the marker to move the marker"
 }
