--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -1204,5 +1204,6 @@
       "GIVE-DATATARGET-CLIENTSECRET": "Angiv client secret",
       "GIVE-DATATARGET-CLIENTSECRET-PLACEHOLDER": "Client's kode"
     }
-  }
+  },
+  "DBLCLICKINFO": "Dobbeltklik på kortet eller træk i markøren for at flytte markøren"
 }
