--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,5 +41,8 @@
     "NAME-ASCENDING": "Name: acsending",
     "NAME-DESCENDING": "Name: faldende"
   },
-  "DBLCLICKINFO": "Doubleclick on the map or drag the marker to move the marker"
+  "DBLCLICKINFO": "Doubleclick on the map or drag the marker to move the marker",
+  "HEIGHTCURVESINFO": "Height curves will only be shown if it's selected, and if you are zoomed in far enough.",
+  "HEIGHTCURVES": "Height curves (0,5 m)",
+  "SATELLITEDENMARK": "Satellite Denmark"
 }
