Added change organization dialog component. This can be opened from details page, and the table. Dialog is still in progress.

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -150,7 +150,8 @@
             "HARDWARE": "Hardware",
             "CONTROLLED-PROPERTY": "Data",
             "DEVICE-TYPE": "Forbindelsesteknologi"
-        }
+        },
+        "CHANGE_ORGANIZATION": "Skift organisation"
     },
     "GATEWAY": {
         "DETAILS": "Detaljer",
