Added dialog for changing gateway organization.

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -197,6 +197,11 @@
       "PROJECT": "Projekt",
       "PROTOTYPE": "Prototype",
       "OTHER": "Andet"
+    },
+    "CHANGE-ORGANIZATION": {
+      "TITLE": "Skift organisation",
+      "CHOOSE-ORGANIZATION": "Vælg hvilken organisation denne gateway skal tilhøre",
+      "SNACKBAR-SAVED": "{{gatewayName}} tilhører nu {{organizationName}}"
     }
   },
   "IOT-DEVICE": {
