Initial restructure of UI-code to allow having tabs under datatarget-details..

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -18,6 +18,7 @@
         "OFFLINE": "Offline",
         "NEVER-SEEN": "Aldrig set",
         "DATE": "Dato",
+        "LOG": "Log",
         "NO-DATA": "Der er ingen data at vise"
     },
     "NAV": {
