--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,7 @@
     "GEN": {
         "CANCEL": "Cancel",
         "SHOW": "Show",
+        "LOG": "Log",
         "PER-PAGE": "Per page"
     },
     "NAV": {
