Finished the Log-tab UI and added it to HTTP-push type. Ready to add to other types..

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -19,6 +19,8 @@
         "NEVER-SEEN": "Aldrig set",
         "DATE": "Dato",
         "LOG": "Log",
+        "MESSAGE": "Besked",
+        "DEVICE": "Enhed",
         "NO-DATA": "Der er ingen data at vise"
     },
     "NAV": {
