Minor adjustment for datatarget-log-table..

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -260,6 +260,10 @@
         },
         "OPENDATADK": {
             "TYPE": "OpenDataDK"
+        },
+        "RESPONSE_TYPE": {
+            "ERROR": "Fejl",
+            "OK": "Ok"
         }
     },
     "MULTICAST": {
