--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,7 @@
         "SHOW-OPTIONS": "Show options"
     },
     "DATATARGET": {
+        "LATEST_MESSAGE": "Latest message",
         "RESPONSE_TYPE": {
             "ERROR": "Fejl",
             "OK": "Ok"
