--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,6 +28,7 @@
     },
     "DATATARGET": {
         "LATEST_MESSAGE": "Latest message",
+        "24H_STATUS": "Status (24 hours)",
         "RESPONSE_TYPE": {
             "ERROR": "Fejl",
             "OK": "Ok"
