Feature/iot 118 move device (#176)
* Added change button for application on devices. Dialog is created, and application, device modell ,organization selectors are up and running. Data targets and payload decoders is a work in progress.

* Added default values, and made datatarget/payload decoders work.

* Added correct translation, and check for null values in data targets.

* added padding to dialog, and reload when dialog dismissed.

* PR changes

---------

Co-authored-by: Frederik Christ Vestergaard <fcv@iterator-it.dk>

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -993,6 +993,15 @@
       "COPY-TO-CLIPBOARD": "Kopier",
       "DOWNLOAD": "Download",
       "NOCONNECTION": "Denne enhed kunne ikke forbinde til den eksterne broker. Ret indstillingerne til eller slet enheden."
+    },
+    "CHANGE-APPLICATION": {
+      "TITLE": "Skift applikation",
+      "CHOOSE-ORGANIZATION": "Vælg den organisation som ejer den applikationen, du vil skifte til",
+      "CHOOSE-APPLICATION": "Vælg hvilken applikation du vil skifte til",
+      "CHOOSE-DEVICE-MODEL": "Vælg device model",
+      "CHOOSE-DATA-TARGET": "Tilknyt data target",
+      "ADD-DATA-TARGET": "Vælg data target",
+      "SNACKBAR-SAVED": "{{deviceName}} er nu tilknyttet {{applicationName}}"
     }
   },
   "MESSAGE": {
