--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -281,14 +281,17 @@
     },
     "TEST_CONNECTION": {
       "TEST-CONNECTION": "Test forbindelse",
-      "SEND-PING-TO-DATATARGET": "Send et ping til dette datatarget",
+      "SEND-PING-TO-DATATARGET": "Forsøg at forbinde til datatarget",
       "SEND-LATEST-PACKAGE": "Send seneste datapakke",
       "CHOOSE-IOT-DEVICE": "Vælg IoT-enhed",
+      "CHOOSE-PAYLOAD-DECODER": "Vælg payload decoder",
       "SEND-DATA-PACKAGE": "Send datapakke",
-      "SEND-DATA-PACKAGE-DESCRIPTION": "Send seneste datapakke fra den valgte IoT-enhed til dette data target Bemærk at datapakken potentielt indgår i jeres driftsdata, hvis det modtages succesfuldt",
+      "SEND-DATA-PACKAGE-DESCRIPTION": "Send seneste datapakke fra den valgte IoT-enhed til dette data target\n Bemærk at datapakken potentielt indgår i jeres driftsdata, hvis det modtages succesfuldt",
       "CHOSEN-DATA-PACKAGE": "Valgt datapakke",
-      "SENT-HTTP-REQUEST": "Sendt - HTTP request",
-      "RECEIVED-HTTP-RESPONSE": "Modtaget - HTTP response",
+      "MQTT-DISCLAIMER": "\n Hvis datapakken fejler skal resultatet ses i loggen",
+      "SENT-DECODED-REQUEST": "Sendt - Dekodet request",
+      "RECEIVED-RESPONSE": "Modtaget",
+      "RESPONSE": "Svar",
       "HEADERS": "Headers",
       "BODY": "Body"
     }
