Changes from PR

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -1317,8 +1317,8 @@
       "CANCEL": "Annuller",
       "SAVE": "Gem nøgle",
       "CREATE-API-KEY": "Opret nøgle",
-      "EXPIRATION-DATE": "Udløbsdato",
-      "EXPIRATION-DATE-PLACEHOLDER": "Udløbsdato",
+      "EXPIRATION-DATE": "Deaktiveringsdato",
+      "EXPIRATION-DATE-PLACEHOLDER": "Deaktiveringsdato",
       "EXPIRATION-DATE-DESCRIPTION": "Nøgle deaktiveres automatisk på denne dato"
     },
     "TABLE-ROW": {
@@ -1326,7 +1326,7 @@
       "DELETE": "Slet"
     },
     "STATUS": "Status",
-    "EXPIRES-ON": "Udløbsdato"
+    "EXPIRES-ON": "Deaktiveringsdato"
   },
   "NoUsersAdded": "Ingen brugergrupper er tilføjet",
   "FIWARE": {
