--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -353,12 +353,12 @@
       "GIVE-OPENDATADK-RESOURCETITLE-INFO": "Titel på den ressource, der vises i datasættet på opendata.dk",
       "GIVE-OPENDATADK-DESCRIPTION": "Beskrivelse",
       "GIVE-OPENDATADK-DESCRIPTION-PLACEHOLDER": "Beskrivelse",
-      "GIVE-OPENDATADK-KEYWORDS": "Angiv emneord",
-      "GIVE-OPENDATADK-KEYWORDS-PLACEHOLDER": "Vælg nøgleord fra dropdown",
-      "GIVE-OPENDATADK-KEYWORDS-INFO": "Ved hjælp af emneord inddeles datasæt i kategorier, som dataanvendere kan søge i. Der er i alt 14 emneord, og der kan vælges flere til det samme datatarget.",
-      "GIVE-OPENDATADK-KEYWORDS-FREE": "Angiv nøgleord",
-      "GIVE-OPENDATADK-KEYWORDS-FREE-PLACEHOLDER": "Angiv emneord",
-      "GIVE-OPENDATADK-KEYWORDS-FREE-INFO": "Nøgleord er det samme som tags og øger muligheden for at finde dataene via fritekst-søgning. Giv dataene så mange nøgleord som muligt. Husk, det skal give mening for en ekstern bruger.",
+      "GIVE-OPENDATADK-THEME": "Angiv emneord",
+      "GIVE-OPENDATADK-THEME-PLACEHOLDER": "Vælg emneord fra dropdown",
+      "GIVE-OPENDATADK-THEME-INFO": "Ved hjælp af emneord inddeles datasæt i kategorier, som dataanvendere kan søge i. Der er i alt 14 emneord, og der kan vælges flere til det samme datatarget.",
+      "GIVE-OPENDATADK-TAGS": "Angiv nøgleord",
+      "GIVE-OPENDATADK-TAGS-PLACEHOLDER": "Angiv nøgleord",
+      "GIVE-OPENDATADK-TAGS-INFO": "Nøgleord er det samme som tags og øger muligheden for at finde dataene via fritekst-søgning. Giv dataene så mange nøgleord som muligt. Husk, det skal give mening for en ekstern bruger.",
       "GIVE-OPENDATADK-AUTHORNAME": "Dataejer",
       "GIVE-OPENDATADK-AUTHORNAME-PLACEHOLDER": "Jens Jensen",
       "GIVE-OPENDATADK-AUTHORNAME-INFO": "Ansvarlig afdeling eller person",
